# PyTorch_JIT_Demo

./: .gitattributes  .gitignore  README.md
cpp/: CMakeLists.txt  test_00.cpp  test_01.cpp  test_02_script.cpp  test_02_trace.cpp  test_03.cpp
python/: configuration.py  test_00.py  test_01.py  test_02.py  test_03.py  train.py
